--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,5 +1,6 @@
 
-<nav class="navbar navbar-default">
+
+<nav class="navbar navbar-default" ng-controller="NavCtrl"> <!--manually bind-->
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -13,8 +14,10 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <!-- TODO: Use Angular to loop through nav items -->
+
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#"></a></li>
+              <li ng-repeat="item in navItems">
+                  <a href={{item.url}}>{{item.name}}</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
