--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -14,13 +14,13 @@
             </div>
           </div>
           <!-- TODO: Repeat over our todo list items and setup filtering by search term. Easy peasy -->
-          <div>
+          <div ng-repeat="item in items">
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="col-xs-1"><input type="checkbox" name=""/></div>
-                <div class="col-xs-7"></div>
-                <div class="col-xs-2"></div>
-                <div class="col-xs-1"></div>
+                <div class="col-xs-7">{{item.task}}</div>
+                <div class="col-xs-2">{{item.dueDate}}</div>
+                <div class="col-xs-1">{{item.assignedToDo}}</div>
                 <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
               </div>
             </div>
