--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -20,7 +20,7 @@
                 <div class="col-xs-1"><input type="checkbox" name=""/></div>
                 <div class="col-xs-7">{{item.task}}</div>
                 <div class="col-xs-2">{{item.dueDate}}</div>
-                <div class="col-xs-1">{{item.assignedToDo}}</div>
+                <div class="col-xs-1">{{item.assignedTo}}</div>
                 <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
               </div>
             </div>
