--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -9,12 +9,12 @@
                   <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
                 </span>
                 <!-- TODO: Bind the input to our todo list -->
-                <input type="text" class="form-control" placeholder="Search for...">
+                <input type="text" class="form-control" ng-model="searchTerm" placeholder="Search for...">
               </div>
             </div>
           </div>
           <!-- TODO: Repeat over our todo list items and setup filtering by search term. Easy peasy -->
-          <div ng-repeat="item in items">
+          <div ng-repeat="item in items | filter: searchTerm">
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="col-xs-1"><input type="checkbox" name=""/></div>
