--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -10,6 +10,17 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">Todo App</a>
+            <div class="row">
+                    <div class="col-xs-4">
+                      <div class="input-group">
+                        <span class="input-group-btn">
+                          <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
+                        </span>
+                        <!-- TODO: Bind the input to our todo list -->
+                        <input type="text" class="form-control" ng-model="searchTerm" placeholder="Search for...">
+                      </div>
+                    </div>
+                  </div>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
