--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -11,7 +11,7 @@
             </button>
             <a class="navbar-brand" href="#">Todo App</a>
             <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-4" ng-show="isActive('/items/list')">
                       <div class="input-group">
                         <span class="input-group-btn">
                           <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
